tests/fixtures/syntax/valid/comment_all_positions.repor
// leading top-level comment
case "comment all positions" { // case open comment
  // standalone comment in case block
  $ true
  assert { // assert open comment
    // standalone comment in assertion block
    exit 0 // expectation comment
  } // assert close comment
} // case close comment
