tests/fixtures/syntax/invalid/unclosed_assertion_block.repor
case "unclosed assertion" {
  $ true
  assert {
    exit 0
